--- a/.github/workflows/optic-ci.yml
+++ b/.github/workflows/optic-ci.yml
@@ -18,4 +18,4 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: deno fmt --check
       - name: run tests
-        run: deno test --allow-read --allow-write
+        run: deno test --allow-read --allow-write --allow-run
