--- a/.github/workflows/optic-ci.yml
+++ b/.github/workflows/optic-ci.yml
@@ -17,5 +17,8 @@ jobs:
       - name: check format
         if: matrix.os == 'ubuntu-latest'
         run: deno fmt --check
+      - name: check lint
+        if: matrix.os == 'ubuntu-latest'
+        run: deno lint
       - name: run tests
         run: deno test --allow-read --allow-write --allow-run
