--- a/.github/workflows/optic-ci.yml
+++ b/.github/workflows/optic-ci.yml
@@ -19,6 +19,6 @@ jobs:
         run: deno fmt --check
       - name: check lint
         if: matrix.os == 'ubuntu-latest'
-        run: deno lint
+        run: deno lint --unstable
       - name: run tests
         run: deno test --allow-read --allow-write --allow-run
