chore: upgrade to support Deno 1.5

--- a/egg.yml
+++ b/egg.yml
@@ -1,13 +1,13 @@
 name: optic
 description: A powerful logging framework for Deno
-stable: true
-version: 1.0.0
+version: 1.0.1
 entry: /mod.ts
 repository: 'https://github.com/onjara/optic'
 files:
   - ./**/*.ts
   - ./**/*.md
   - ./LICENSE
+  - ./mod.ts
 ignore:
   - ./perf-tests/*.ts
   - ./tester.ts
