fix: entry point broken

--- a/egg.yml
+++ b/egg.yml
@@ -1,15 +1,16 @@
 name: optic
 description: A powerful logging framework for Deno
-version: 1.0.1
-entry: /mod.ts
+version: 1.0.2
+entry: ./mod.ts
 repository: 'https://github.com/onjara/optic'
 files:
   - ./**/*.ts
   - ./**/*.md
   - ./LICENSE
-  - ./mod.ts
 ignore:
-  - ./perf-tests/*.ts
-  - ./tester.ts
+  - perf-tests/*.ts
+  - tester.ts
 checkAll: true
 unlisted: false
+check: true
+homepage: 'https://github.com/onjara/optic'
