--- a/deno.json
+++ b/deno.json
@@ -12,8 +12,8 @@
   },
   "publish": {
     "exclude": [
-      ".github",
-      "project_utils"
+      ".github", "project_utils"
     ]
   }
 }
+ 
